Visualization, Logging and Model Checkpoints for training

--- a/configfile.ini
+++ b/configfile.ini
@@ -1,4 +1,7 @@
 [ds]
 dataset_path = D:/Coding Projects/Pycharm Projects/Datasets/image-enhancement-dataset
 
+[ckpt]
+weights_path = saved_models\weights\weights.best.hdf5
+model_path = saved_models
 
