Loss function Modified

--- a/configfile.ini
+++ b/configfile.ini
@@ -2,6 +2,6 @@
 dataset_path = D:/Coding Projects/Pycharm Projects/Datasets/image-enhancement-dataset
 
 [ckpt]
-weights_path = saved_models\weights\weights.best.hdf5
+weights_path = saved_models\weights\weights.best.stable.hdf5
 model_path = saved_models
-
+weights_path_unedited = saved_models\weights\weights.best.hdf5
